--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>מדד המותגים 2025 - דשבורד אסטרטגי</title>
+    <title>מדד המותגים 2025 - דשבורד Blueprint</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
@@ -14,8 +14,12 @@
         body {
             font-family: 'Assistant', sans-serif;
             scroll-behavior: smooth;
-            background-color: #f8fafc; /* slate-50 */
-            color: #0f172a; /* slate-900 */
+            background-color: #eef2ff; /* indigo-50 */
+            color: #1e1b4b; /* indigo-950 */
+            background-image:
+                linear-gradient(rgba(224, 231, 255, 0.5) 1px, transparent 1px),
+                linear-gradient(90deg, rgba(224, 231, 255, 0.5) 1px, transparent 1px);
+            background-size: 20px 20px;
         }
         .chart-container {
             position: relative;
@@ -23,51 +27,56 @@
             width: 100%;
         }
         .card {
-            background-color: #ffffff;
-            border: 1px solid #e2e8f0; /* slate-200 */
+            background-color: rgba(255, 255, 255, 0.8);
+            backdrop-filter: blur(10px);
+            border: 1px solid #c7d2fe; /* indigo-200 */
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.05), 0 2px 4px -2px rgba(0, 0, 0, 0.05);
         }
         .card:hover {
-            transform: translateY(-5px);
+            transform: translateY(-5px) scale(1.02);
             box-shadow: 0 10px 15px -3px rgba(0, 0, 0, 0.07), 0 4px 6px -4px rgba(0, 0, 0, 0.07);
         }
         ::-webkit-scrollbar {
             width: 8px;
+            height: 8px;
         }
         ::-webkit-scrollbar-track {
-            background: #e2e8f0; /* slate-200 */
+            background: #e0e7ff; /* indigo-100 */
         }
         ::-webkit-scrollbar-thumb {
-            background: #94a3b8; /* slate-400 */
+            background: #a5b4fc; /* indigo-300 */
             border-radius: 4px;
         }
         ::-webkit-scrollbar-thumb:hover {
-            background: #64748b; /* slate-500 */
+            background: #818cf8; /* indigo-400 */
         }
         #searchInput, #categorySelector {
-            background-color: #f1f5f9; /* slate-100 */
-            border-color: #cbd5e1; /* slate-300 */
-            color: #0f172a; /* slate-900 */
+            background-color: #ffffff;
+            border-color: #c7d2fe; /* indigo-200 */
+            color: #1e1b4b; /* indigo-950 */
         }
         #searchInput::placeholder {
             color: #64748b; /* slate-500 */
         }
+        .table-container {
+            overflow-x: auto;
+        }
     </style>
 </head>
-<body class="bg-slate-50 text-slate-900">
+<body class="bg-indigo-50 text-indigo-950">
 
     <!-- 
     Strategy Brief:
     - Core Thesis: מדד המותגים 2025 חושף כי נאמנות הצרכן הישראלי נטועה במותגים ותיקים ומקומיים לצד אימוץ כלים טכנולוגיים גלובליים, בעוד קטגוריות שירות מסורתיות מתקשות לזכות באמון הציבור.
-    - Design Concept: דשבורד אסטרטגי בסגנון "Strategic Blueprint". עיצוב נקי, מואר ומבוסס גריד, המדגיש בהירות, סדר ונגישות. הפלטה המונוכרומטית עם הדגשות כחולות משדרת מקצועיות ואמינות, ומאפשרת לנתונים ולתובנות לעמוד במרכז.
+    - Design Concept: דשבורד אסטרטגי בסגנון "Blueprint". עיצוב נקי, מואר ומבוסס גריד, המדגיש בהירות, סדר ונגישות. הפלטה המונוכרומטית עם הדגשות כחולות משדרת מקצועיות ואמינות, ומאפשרת לנתונים ולתובנות לעמוד במרכז.
     - Color Palette:
-        - רקע_ראשי: #f8fafc (slate-50)
-        - טקסט_ראשי: #0f172a (slate-900)
-        - טקסט_משני: #475569 (slate-600)
-        - הדגשה_ראשית (CTA): #2563eb (blue-600)
-        - הדגשה_משנית: #0ea5e9 (sky-500)
-        - גבול_מפריד: #e2e8f0 (slate-200)
+        - רקע_ראשי: #eef2ff (indigo-50)
+        - טקסט_ראשי: #1e1b4b (indigo-950)
+        - טקסט_משני: #4338ca (indigo-700)
+        - הדגשה_ראשית (CTA): #4f46e5 (indigo-600)
+        - הדגשה_משנית: #f59e0b (amber-500)
+        - גבול_מפריד: #c7d2fe (indigo-200)
     - Success Metrics: המשתמש יבין את דירוג המותגים המובילים, יזהה את המגמות המרכזיות בשוק הישראלי, ויוכל להשוות בין ביצועי מותגים בקטגוריות שונות.
     -->
 
@@ -75,8 +84,8 @@
         
         <!-- Header -->
         <header class="text-center mb-12">
-            <h1 class="text-4xl md:text-6xl font-bold text-blue-600 mb-3">מדד המותגים 2025 של גלובס</h1>
-            <p class="text-lg text-slate-600">מפת הכוח של הכלכלה הישראלית: ניתוח ויזואלי של 100 המותגים המובילים על בסיס סקר מקיף</p>
+            <h1 class="text-4xl md:text-6xl font-bold text-indigo-800 mb-3">מדד המותגים 2025 של גלובס</h1>
+            <p class="text-lg text-indigo-700">מפת הכוח של הכלכלה הישראלית: ניתוח ויזואלי של 100 המותגים המובילים על בסיס סקר מקיף</p>
         </header>
 
         <!-- Top 5 Brands Highlights -->
@@ -112,19 +121,19 @@
         </section>
 
         <!-- Main Content: Table and Charts -->
-        <div class="grid grid-cols-1 lg:grid-cols-3 gap-8">
+        <div class="grid grid-cols-1 lg:grid-cols-5 gap-8">
             
             <!-- Top 100 Table -->
-            <section class="lg:col-span-2 card p-6 rounded-xl">
+            <section class="lg:col-span-3 card p-6 rounded-xl">
                 <h2 class="text-3xl font-bold mb-4 text-slate-800">100 המותגים המובילים בישראל</h2>
-                <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="חיפוש מותג..." class="w-full p-2 border rounded-md mb-4 focus:ring-2 focus:ring-blue-500 focus:border-transparent">
-                <div class="overflow-auto max-h-[600px]">
-                    <table id="brandsTable" class="w-full text-right">
-                        <thead class="bg-slate-100 sticky top-0">
+                <input type="text" id="searchInput" onkeyup="filterTable()" placeholder="חיפוש מותג..." class="w-full p-2 border rounded-md mb-4 focus:ring-2 focus:ring-indigo-500 focus:border-transparent">
+                <div class="table-container max-h-[600px]">
+                    <table id="brandsTable" class="w-full text-right min-w-[600px]">
+                        <thead class="bg-indigo-100 sticky top-0">
                             <tr>
-                                <th class="p-3 font-semibold text-slate-700">דירוג</th>
-                                <th class="p-3 font-semibold text-slate-700">מותג</th>
-                                <th class="p-3 font-semibold text-slate-700">קטגוריה</th>
+                                <th class="p-3 font-semibold text-indigo-800">דירוג</th>
+                                <th class="p-3 font-semibold text-indigo-800">מותג</th>
+                                <th class="p-3 font-semibold text-indigo-800">קטגוריה</th>
                             </tr>
                         </thead>
                         <tbody id="tableBody">
@@ -135,10 +144,10 @@
             </section>
 
             <!-- Category Analysis -->
-            <section class="card p-6 rounded-xl">
+            <section class="lg:col-span-2 card p-6 rounded-xl">
                 <h2 class="text-3xl font-bold mb-4 text-slate-800">ניתוח לפי קטגוריות</h2>
                 <p class="mb-4 text-slate-600">בחר קטגוריה כדי לראות את דירוג המותגים המובילים בה.</p>
-                <select id="categorySelector" class="w-full p-2 border rounded-md mb-4 focus:ring-2 focus:ring-blue-500">
+                <select id="categorySelector" class="w-full p-2 border rounded-md mb-4 focus:ring-2 focus:ring-indigo-500">
                     <option value="משרדי פרסום">משרדי פרסום</option>
                     <option value="רכב">רכב</option>
                     <option value="בנקאות">בנקאות</option>
@@ -195,7 +204,7 @@
             <h2 class="text-3xl font-bold text-center mb-8 text-slate-800">תובנות מרכזיות וניתוחים</h2>
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-6">
                 <div class="card p-6 rounded-xl">
-                    <h3 class="text-xl font-bold mb-2 text-blue-600">סיכום ומסקנות</h3>
+                    <h3 class="text-xl font-bold mb-2 text-indigo-600">סיכום ומסקנות</h3>
                     <ul class="list-disc list-inside space-y-2 text-slate-700">
                         <li>דומיננטיות טכנולוגית בחיי היום-יום.</li>
                         <li>כוחם של מותגי מזון מקומיים ונוסטלגיה.</li>
@@ -205,11 +214,11 @@
                     </ul>
                 </div>
                 <div class="card p-6 rounded-xl">
-                    <h3 class="text-xl font-bold mb-2 text-blue-600">פרסומת העשור</h3>
+                    <h3 class="text-xl font-bold mb-2 text-indigo-600">פרסומת העשור</h3>
                     <p class="text-slate-700">הפרסומת "עוץ לי גוץ לי" של <span class="font-bold text-slate-900">בזק</span>, בכיכובם של גידי גוב ועומר אדם, נבחרה לפרסומת הזכורה והאהובה ביותר בעשור האחרון, בזכות שילוב של הומור, נוסטלגיה והפקה מושקעת.</p>
                 </div>
                 <div class="card p-6 rounded-xl">
-                    <h3 class="text-xl font-bold mb-2 text-blue-600">המותגים הכי ישראליים</h3>
+                    <h3 class="text-xl font-bold mb-2 text-indigo-600">המותגים הכי ישראליים</h3>
                      <ol class="list-decimal list-inside space-y-1 font-semibold text-slate-700">
                         <li>אל על</li>
                         <li>עלית</li>
@@ -219,7 +228,7 @@
                     </ol>
                 </div>
                 <div class="card p-6 rounded-xl">
-                    <h3 class="text-xl font-bold mb-2 text-blue-600">העדפות בחברה הערבית</h3>
+                    <h3 class="text-xl font-bold mb-2 text-indigo-600">העדפות בחברה הערבית</h3>
                     <p class="text-slate-700 mb-2">החברה הערבית מביעה העדפה ברורה למותגי יוקרה (מרצדס, BMW) וטכנולוגיה (אפל), לצד נאמנות למותגים נגישים ובינלאומיים. המותגים המובילים: Waze, WhatsApp ו-YouTube.</p>
                 </div>
             </div>
@@ -233,55 +242,55 @@
             </p>
             <div class="space-y-6">
                 <div class="card p-6 rounded-xl">
-                    <h3 class="text-xl font-bold mb-2 text-blue-600">1. נוסטלגיה וחיבור רגשי הם המנוע החזק ביותר</h3>
+                    <h3 class="text-xl font-bold mb-2 text-indigo-600">1. נוסטלגיה וחיבור רגשי הם המנוע החזק ביותר</h3>
                     <p class="text-slate-700 mb-3">מותגים כמו במבה (מקום 4), שוקולד פרה (11), ובזק עם קמפיין "עוץ לי גוץ לי" מראים שהרגש גובר על הרעש. הקהל מחפש חום, שייכות וביטחון במה שכבר מוכר לו.</p>
-                    <p class="text-sm bg-blue-50 p-3 rounded-lg border-l-4 border-blue-500"><span class="font-semibold">קריאייטיב לדוגמה:</span> "הפוליסה של סבתא" – קמפיין לחברת ביטוח שמציג סבים וסבתות ישראלים המספרים על הערכים החשובים בחיים. ביטוח כמעשה המשכי של דאגה בין-דורית.</p>
+                    <p class="text-sm bg-indigo-50 p-3 rounded-lg border-l-4 border-indigo-500"><span class="font-semibold">קריאייטיב לדוגמה:</span> "הפוליסה של סבתא" – קמפיין לחברת ביטוח שמציג סבים וסבתות ישראלים המספרים על הערכים החשובים בחיים. ביטוח כמעשה המשכי של דאגה בין-דורית.</p>
                 </div>
                 <div class="card p-6 rounded-xl">
-                    <h3 class="text-xl font-bold mb-2 text-blue-600">2. אותנטיות וערך אמיתי מנצחים תקציבי ענק</h3>
+                    <h3 class="text-xl font-bold mb-2 text-indigo-600">2. אותנטיות וערך אמיתי מנצחים תקציבי ענק</h3>
                     <p class="text-slate-700 mb-3">הבנקים מדורגים נמוך במדד למרות השקעות עתק בפרסום. הקהל לא קונה הצגות. לעומת זאת, מהלכים ערכיים אמיתיים (כמו AXA בצרפת) נחרטים בזיכרון.</p>
-                    <p class="text-sm bg-blue-50 p-3 rounded-lg border-l-4 border-blue-500"><span class="font-semibold">קריאייטיב לדוגמה:</span> "תשאירו תווית" – רשת אופנה שאוספת בגדים יד שנייה מהקהל, מצרפת סיפור אישי לכל פריט ומוכרת מחדש בחנות ייעודית. הכנסות לעמותות. מוכיח מחויבות אמיתית.</p>
+                    <p class="text-sm bg-indigo-50 p-3 rounded-lg border-l-4 border-indigo-500"><span class="font-semibold">קריאייטיב לדוגמה:</span> "תשאירו תווית" – רשת אופנה שאוספת בגדים יד שנייה מהקהל, מצרפת סיפור אישי לכל פריט ומוכרת מחדש בחנות ייעודית. הכנסות לעמותות. מוכיח מחויבות אמיתית.</p>
                 </div>
                  <div class="card p-6 rounded-xl">
-                    <h3 class="text-xl font-bold mb-2 text-blue-600">3. הקהילה היא השגרירה הטובה ביותר</h3>
+                    <h3 class="text-xl font-bold mb-2 text-indigo-600">3. הקהילה היא השגרירה הטובה ביותר</h3>
                     <p class="text-slate-700 mb-3">סיפורי הצלחה כמו Spotify Wrapped או רקסהאם מוכיחים: כשאתה חלק ממשהו – אתה משתף. מותגים שמייצרים חוויות קהילתיות זוכים לנאמנות בלתי ניתנת לרכישה.</p>
-                    <p class="text-sm bg-blue-50 p-3 rounded-lg border-l-4 border-blue-500"><span class="font-semibold">קריאייטיב לדוגמה:</span> "הבר השכונתי של ישראל" – מותג בירה שמאמץ ברים קטנים, משפץ, חוגג ומזמין את הקהילה לבלות מחדש.</p>
+                    <p class="text-sm bg-indigo-50 p-3 rounded-lg border-l-4 border-indigo-500"><span class="font-semibold">קריאייטיב לדוגמה:</span> "הבר השכונתי של ישראל" – מותג בירה שמאמץ ברים קטנים, משפץ, חוגג ומזמין את הקהילה לבלות מחדש.</p>
                 </div>
                  <div class="card p-6 rounded-xl">
-                    <h3 class="text-xl font-bold mb-2 text-blue-600">4. חדשנות היא בחוויה, לא רק במוצר</h3>
+                    <h3 class="text-xl font-bold mb-2 text-indigo-600">4. חדשנות היא בחוויה, לא רק במוצר</h3>
                     <p class="text-slate-700 mb-3">מהלכים מבריקים כמו הדמיית הריהוט של IKEA או אריזות האופניים של VanMoof מוכיחים: לקוחות זוכרים הפתעה, פתרון חכם, או רגש.</p>
-                    <p class="text-sm bg-blue-50 p-3 rounded-lg border-l-4 border-blue-500"><span class="font-semibold">קריאייטיב לדוגמה:</span> "הפתעה בדלת" – חברת שליחויות שמוסיפה לכל משלוח הפתעה קטנה (שובר, בדיחה, זרעי תבלין). מחזק את הקשר ומעלה חיוך.</p>
+                    <p class="text-sm bg-indigo-50 p-3 rounded-lg border-l-4 border-indigo-500"><span class="font-semibold">קריאייטיב לדוגמה:</span> "הפתעה בדלת" – חברת שליחויות שמוסיפה לכל משלוח הפתעה קטנה (שובר, בדיחה, זרעי תבלין). מחזק את הקשר ומעלה חיוך.</p>
                 </div>
                  <div class="card p-6 rounded-xl">
-                    <h3 class="text-xl font-bold mb-2 text-blue-600">5. גמישות תרבותית ותגובה מיידית = זהב דיגיטלי</h3>
+                    <h3 class="text-xl font-bold mb-2 text-indigo-600">5. גמישות תרבותית ותגובה מיידית = זהב דיגיטלי</h3>
                     <p class="text-slate-700 mb-3">מותגים כמו Heinz (שקפצה על הטרנד של טיילור סוויפט) ו"שוקולד דובאי" מראים שתגובה מהירה לשיחה הציבורית שווה יותר מאלף ג'ינגלים.</p>
-                    <p class="text-sm bg-blue-50 p-3 rounded-lg border-l-4 border-blue-500"><span class="font-semibold">קריאייטיב לדוגמה:</span> "ערכת הפסטה הוויראלית" – רשת סופר מזהה טרנד בטיקטוק, משיקה ערכה מותאמת תוך 24 שעות ומעלה סרטון איך להכין בבית.</p>
+                    <p class="text-sm bg-indigo-50 p-3 rounded-lg border-l-4 border-indigo-500"><span class="font-semibold">קריאייטיב לדוגמה:</span> "ערכת הפסטה הוויראלית" – רשת סופר מזהה טרנד בטיקטוק, משיקה ערכה מותאמת תוך 24 שעות ומעלה סרטון איך להכין בבית.</p>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
                     <div class="card p-6 rounded-xl">
-                        <h3 class="text-xl font-bold mb-2 text-blue-600">6. אמון הוא המטבע החזק ביותר</h3>
+                        <h3 class="text-xl font-bold mb-2 text-indigo-600">6. אמון הוא המטבע החזק ביותר</h3>
                         <p class="text-slate-700">מותגים לא נמדדים לפי כמות הלידים – אלא לפי תחושת הביטחון שהם נותנים לציבור. מדד המותגים מדגיש זאת שוב ושוב.</p>
                     </div>
                     <div class="card p-6 rounded-xl">
-                        <h3 class="text-xl font-bold mb-2 text-blue-600">7. מותגים ישראליים נהנים מיתרון טבעי</h3>
+                        <h3 class="text-xl font-bold mb-2 text-indigo-600">7. מותגים ישראליים נהנים מיתרון טבעי</h3>
                         <p class="text-slate-700">הקהל המקומי מחפש שפה, תרבות וזהות שהוא מכיר. עבור חברת פרסום שפועלת בשוק החרדי – מדובר בנכס עוצמתי.</p>
                     </div>
                     <div class="card p-6 rounded-xl">
-                        <h3 class="text-xl font-bold mb-2 text-blue-600">8. ניהול מותג זהיר במגזרים יציבים</h3>
+                        <h3 class="text-xl font-bold mb-2 text-indigo-600">8. ניהול מותג זהיר במגזרים יציבים</h3>
                         <p class="text-slate-700">במזון, בריאות ותחבורה הקהל לא מחפש גימיקים אלא ביטחון ושירות. כאן קל לבלוט אם בונים זהות נכונה לאורך זמן.</p>
                     </div>
                     <div class="card p-6 rounded-xl">
-                        <h3 class="text-xl font-bold mb-2 text-blue-600">9. משפיענים: לא כל פרצוף הוא פרזנטור</h3>
+                        <h3 class="text-xl font-bold mb-2 text-indigo-600">9. משפיענים: לא כל פרצוף הוא פרזנטור</h3>
                         <p class="text-slate-700">קמפיינים שמבוססים על טאלנטים לא מתאימים גורמים לנזק. חובה לוודא שהפרזנטור מגלם את ערכי המותג, לא רק מייצר לייקים.</p>
                     </div>
                 </div>
                  <div class="card p-6 rounded-xl">
-                    <h3 class="text-xl font-bold mb-2 text-blue-600">10. שינוי במדידת הצלחה – פחות הקלקות, יותר זכירות, אהדה ואמון</h3>
+                    <h3 class="text-xl font-bold mb-2 text-indigo-600">10. שינוי במדידת הצלחה – פחות הקלקות, יותר זכירות, אהדה ואמון</h3>
                     <p class="text-slate-700">פרסום שעובד הוא פרסום שנזכר. צריך להוביל לקוחות לחשוב במונחים של עומק והשפעה, לא רק מכירות בטווח הקצר.</p>
                 </div>
 
                 <div class="card p-6 rounded-xl mt-6 text-center">
-                     <h3 class="text-2xl font-bold mb-2 text-blue-600">לסיכום:</h3>
+                     <h3 class="text-2xl font-bold mb-2 text-indigo-600">לסיכום:</h3>
                      <p class="text-slate-700 text-lg">צריך להוביל מהפכה בשיח הפרסומי: ממסרים מוכווני מכירה למסרים מוכווני זהות. מקמפיינים חד-פעמיים לבניית מותג ארוכת טווח. מציניות לאמת. מי שיעז לדבר כמו בן אדם – יישמע.</p>
                 </div>
             </div>
@@ -361,8 +370,8 @@
                 datasets: [{
                     label: isAdvertising ? 'מספר מותגים בטופ 100' : 'דירוג כללי',
                     data: values,
-                    backgroundColor: 'rgba(37, 99, 235, 0.7)',
-                    borderColor: 'rgba(37, 99, 235, 1)',
+                    backgroundColor: 'rgba(79, 70, 229, 0.7)',
+                    borderColor: 'rgba(79, 70, 229, 1)',
                     borderWidth: 1,
                     borderRadius: 4
                 }]
@@ -386,7 +395,7 @@
                 plugins: {
                     legend: { display: false },
                     tooltip: {
-                        backgroundColor: '#0f172a',
+                        backgroundColor: '#1e1b4b',
                         titleColor: '#f1f5f9',
                         bodyColor: '#cbd5e1',
                         bodyFont: { family: "'Assistant', sans-serif" },
@@ -408,7 +417,7 @@
             duration: 0.8,
             opacity: 0,
             y: 30,
-            stagger: 0.1,
+            stagger: 0.07,
             ease: 'power3.out'
         });
     };
