--- a/index.html
+++ b/index.html
@@ -260,7 +260,6 @@
         const top100Brands = [ { rank: 1, name: "Waze", category: "אפליקציות ושירותים" }, { rank: 2, name: "WhatsApp", category: "רשתות חברתיות" }, { rank: 3, name: "Google", category: "רשתות חברתיות" }, { rank: 4, name: "במבה", category: "מזון, משקאות וטואלטיקה" }, { rank: 5, name: "Google Maps", category: "אפליקציות ושירותים" }, { rank: 6, name: "Samsung", category: "מוצרי חשמל ואלקטרוניקה" }, { rank: 7, name: "Microsoft", category: "רשתות חברתיות" }, { rank: 8, name: "YouTube", category: "סטרימינג ומדיה" }, { rank: 9, name: "אנדרואיד", category: "מחשבים וסלולר" }, { rank: 10, name: "טמבור", category: "עיצוב הבית" }, { rank: 11, name: "שוקולד פרה", category: "מזון, משקאות וטואלטיקה" }, { rank: 12, name: "רב בריח", category: "עיצוב הבית" }, { rank: 13, name: "BUYME", category: "אפליקציות ושירותים" }, { rank: 14, name: "תפוצ'יפס", category: "מזון, משקאות וטואלטיקה" }, { rank: 15, name: "סנו", category: "מזון, משקאות וטואלטיקה" }, { rank: 16, name: "סולתם", category: "קמעונאות" }, { rank: 17, name: "KSP", category: "קמעונאות" }, { rank: 18, name: "טויוטה", category: "רכב" }, { rank: 19, name: "מי עדן", category: "מזון, משקאות וטואלטיקה" }, { rank: 20, name: "יוגורט דנונה", category: "מזון, משקאות וטואלטיקה" }, { rank: 21, name: "סטימצקי", category: "קמעונאות" }, { rank: 22, name: "ויקיפדיה", category: "רשתות חברתיות" }, { rank: 23, name: "סופר-פארם", category: "קמעונאות" }, { rank: 24, name: "תנובה", category: "יצרני מזון" }, { rank: 25, name: "יטבתה", category: "יצרני מזון" }, { rank: 26, name: "רב קו", category: "אפליקציות ושירותים" }, { rank: 27, name: "איקאה", category: "עיצוב הבית" }, { rank: 28, name: "שוקולד השחר", category: "מזון, משקאות וטואלטיקה" }, { rank: 29, name: "מילקי", category: "מזון, משקאות וטואלטיקה" }, { rank: 30, name: "Bosch", category: "מוצרי חשמל ואלקטרוניקה" }, { rank: 31, name: "מקס סטוק", category: "קמעונאות" }, { rank: 32, name: "Nike", category: "אופנה והנעלה" }, { rank: 33, name: "אדידס", category: "אופנה והנעלה" }, { rank: 34, name: "נביעות", category: "מזון, משקאות וטואלטיקה" }, { rank: 35, name: "Visa", category: "כרטיסי אשראי" }, { rank: 36, name: "LG", category: "מוצרי חשמל ואלקטרוניקה" }, { rank: 37, name: "Nutella", category: "מזון, משקאות וטואלטיקה" }, { rank: 38, name: "טרה", category: "יצרני מזון" }, { rank: 39, name: "אפל", category: "מחשבים וסלולר" }, { rank: 40, name: "בית חולים שיבא", category: "בריאות" }, { rank: 41, name: "קפה טורקי עלית", category: "מזון, משקאות וטואלטיקה" }, { rank: 42, name: "תדיראן", category: "מוצרי חשמל ואלקטרוניקה" }, { rank: 43, name: "Sony", category: "מחשבים וסלולר" }, { rank: 44, name: "פריגת", category: "מזון, משקאות וטואלטיקה" }, { rank: 45, name: "פינוק", category: "מזון, משקאות וטואלטיקה" }, { rank: 46, name: "שטראוס", category: "יצרני מזון" }, { rank: 47, name: "אסם נסטלה", category: "יצרני מזון" }, { rank: 48, name: "טבע נאות", category: "אופנה והנעלה" }, { rank: 49, name: "ויסוצקי", category: "מזון, משקאות וטואלטיקה" }, { rank: 50, name: "צומת ספרים", category: "קמעונאות" }, { rank: 51, name: "ביסלי", category: "מזון, משקאות וטואלטיקה" }, { rank: 52, name: "Netflix", category: "סטרימינג ומדיה" }, { rank: 53, name: "יד2", category: "נדל\"ן" }, { rank: 54, name: "קוקה קולה", category: "מזון, משקאות וטואלטיקה" }, { rank: 55, name: "ישראכרט", category: "כרטיסי אשראי" }, { rank: 56, name: "קפה נמס עלית", category: "מזון, משקאות וטואלטיקה" }, { rank: 57, name: "Nespresso", category: "מזון, משקאות וטואלטיקה" }, { rank: 58, name: "Dyson", category: "מוצרי חשמל ואלקטרוניקה" }, { rank: 59, name: "HP", category: "מחשבים וסלולר" }, { rank: 60, name: "מאזדה", category: "רכב" }, { rank: 61, name: "אל על", category: "תעופה" }, { rank: 62, name: "כאל", category: "כרטיסי אשראי" }, { rank: 63, name: "מרצדס", category: "רכב" }, { rank: 64, name: "ChatGPT", category: "בינה מלאכותית" }, { rank: 65, name: "פנגו", category: "אפליקציות ושירותים" }, { rank: 66, name: "קניוני עזריאלי", category: "נדל\"ן" }, { rank: 67, name: "אלקטרה", category: "מוצרי חשמל ואלקטרוניקה" }, { rank: 68, name: "H&M", category: "אופנה והנעלה" }, { rank: 69, name: "רולדין", category: "מסעדות ובתי קפה" }, { rank: 70, name: "BMW", category: "רכב" }, { rank: 71, name: "Bit", category: "אפליקציות ושירותים" }, { rank: 72, name: "עלי אקספרס", category: "אתרי קניות" }, { rank: 73, name: "כתר", category: "קמעונאות" }, { rank: 74, name: "פייבוקס", category: "אפליקציות ושירותים" }, { rank: 75, name: "פיצה האט", category: "מסעדות ובתי קפה" }, { rank: 76, name: "רמי לוי", category: "רשתות מזון" }, { rank: 77, name: "כאן 11", category: "עיתונות וחדשות" }, { rank: 78, name: "iPhone", category: "מחשבים וסלולר" }, { rank: 79, name: "מאסטרקארד", category: "כרטיסי אשראי" }, { rank: 80, name: "תמי 4", category: "מזון, משקאות וטואלטיקה" }, { rank: 81, name: "ביג", category: "נדל\"ן" }, { rank: 82, name: "שילב", category: "קמעונאות" }, { rank: 83, name: "ארומה", category: "מסעדות ובתי קפה" }, { rank: 84, name: "מחלבות גד", category: "יצרני מזון" }, { rank: 85, name: "נעמן", category: "עיצוב הבית" }, { rank: 86, name: "אריאל", category: "מזון, משקאות וטואלטיקה" }, { rank: 87, name: "טסטר צ'ויס", category: "מזון, משקאות וטואלטיקה" }, { rank: 88, name: "עמינח", category: "עיצוב הבית" }, { rank: 89, name: "בית חולים איכילוב", category: "בריאות" }, { rank: 90, name: "אושר עד", category: "רשתות מזון" }, { rank: 91, name: "פוקס הום", category: "עיצוב הבית" }, { rank: 92, name: "אסותא", category: "בריאות" }, { rank: 93, name: "Lenovo", category: "מחשבים וסלולר" }, { rank: 94, name: "אאודי", category: "רכב" }, { rank: 95, name: "יונדאי", category: "רכב" }, { rank: 96, name: "בזק", category: "ספקי תקשורת" }, { rank: 97, name: "פיליפס", category: "מוצרי חשמל ואלקטרוניקה" }, { rank: 98, name: "רכבת ישראל", category: "תחבורה" }, { rank: 99, name: "פוקס", category: "אופנה והנעלה" }, { rank: 100, name: "הראל", category: "ביטוח ופנסיה" } ];
         const categoryData = { 'משרדי פרסום': [ { name: 'באומן בר ריבנאי', value: 11 }, { name: 'אדלר חומסקי', value: 7 }, { name: 'מקאן ת"א', value: 7 }, { name: 'ראובני פרידן', value: 7 }, { name: 'גיתם BBDO', value: 5 }, ], 'רכב': [ { name: 'טויוטה', value: 18 }, { name: 'מאזדה', value: 60 }, { name: 'מרצדס', value: 63 }, { name: 'BMW', value: 70 }, { name: 'אאודי', value: 94 }, { name: 'יונדאי', value: 95 }, ], 'בנקאות': [ { name: 'בנק לאומי', value: 156 }, { name: 'בנק הפועלים', value: 157 }, { name: 'מזרחי טפחות', value: 192 }, { name: 'בנק דיסקונט', value: 207 }, { name: 'הבינלאומי', value: 234 }, ], 'יצרני מזון': [ { name: 'תנובה', value: 24 }, { name: 'יטבתה', value: 25 }, { name: 'טרה', value: 38 }, { name: 'שטראוס', value: 46 }, { name: 'אסם נסטלה', value: 47 }, { name: 'מחלבות גד', value: 84 }, ], 'רשתות מזון': [ { name: 'רמי לוי', value: 76 }, { name: 'אושר עד', value: 90 }, { name: 'Yellow', value: 106 }, { name: 'שופרסל', value: 115 }, { name: 'חצי חינם', value: 152 }, ], 'אופנה והנעלה': [ { name: 'Nike', value: 32 }, { name: 'אדידס', value: 33 }, { name: 'טבע נאות', value: 48 }, { name: 'H&M', value: 68 }, { name: 'פוקס', value: 99 }, ], 'ספקי תקשורת': [ { name: 'בזק', value: 96 }, { name: 'פרטנר', value: 125 }, { name: 'פלאפון', value: 137 }, { name: 'סלקום', value: 175 }, { name: 'הוט', value: 235 }, ], 'עיצוב הבית': [ { name: 'טמבור', value: 10 }, { name: 'רב בריח', value: 12 }, { name: 'איקאה', value: 27 }, { name: 'נעמן', value: 85 }, { name: 'עמינח', value: 88 }, ], 'נדלן': [ { name: 'יד2', value: 53 }, { name: 'קניוני עזריאלי', value: 66 }, { name: 'ביג', value: 81 }, { name: 'קניוני עופר', value: 111 }, { name: 'קניוני G', value: 216 }, ] };
 
-        // Populate Table and Mobile Cards
         const tableBody = document.getElementById('tableBody');
         const mobileCardView = document.getElementById('mobileCardView');
         top100Brands.forEach(brand => {
@@ -275,29 +274,20 @@
             mobileCardView.appendChild(card);
         });
 
-        // Search Functionality
-        const searchInput = document.querySelector('#full-list input');
+        const searchInput = document.getElementById('searchInput');
         window.filterContent = function() {
             const filter = searchInput.value.toLowerCase();
-            
-            // Filter desktop table
-            const tableRows = document.querySelectorAll('#tableBody tr');
-            tableRows.forEach(row => {
+            document.querySelectorAll('#tableBody tr').forEach(row => {
                 const brandName = row.cells[1].textContent.toLowerCase();
                 row.style.display = brandName.includes(filter) ? "" : "none";
             });
-
-            // Filter mobile cards
-            const mobileCards = document.querySelectorAll('#mobileCardView > div');
-            mobileCards.forEach(card => {
+            document.querySelectorAll('#mobileCardView > div').forEach(card => {
                 const brandName = card.querySelector('.font-bold').textContent.toLowerCase();
                 card.style.display = brandName.includes(filter) ? "flex" : "none";
             });
         };
         searchInput.addEventListener('keyup', filterContent);
 
-
-        // Category Chart
         const ctx = document.getElementById('categoryChart').getContext('2d');
         let categoryChart;
         function updateChart(category) {
@@ -335,7 +325,6 @@
         }
         document.getElementById('categorySelector').addEventListener('change', (e) => updateChart(e.target.value));
 
-        // Animations & Nav Logic
         gsap.utils.toArray('.animated-element').forEach(el => {
             gsap.from(el, {
                 scrollTrigger: { trigger: el, start: 'top 95%', toggleActions: 'play none none none' },
@@ -360,7 +349,6 @@
             });
         });
         
-        // Initial load
         updateChart('משרדי פרסום');
     });
 </script>
